@@ -1,8 +1,12 @@
 package com.movierating.service;
 
 import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
 import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -15,32 +19,35 @@ import com.movierating.repo.MovieRepository;
 public class MovieServiceImpl implements MovieService {
 	List<String> Value = new ArrayList<String>();
 	List<MovieEntity> movies = new ArrayList<MovieEntity>();
-	
+
 	@Autowired
 	MovieRepository movieRepo;
 
 	@Override
 	public String save(MovieEntity movieEntity) throws MovieAlreadyExistsException {
 		try {
-			if (movieRepo.existsById(movieEntity.getMovieId())) {
-				throw new MovieAlreadyExistsException("This movie already exists");
-			} else {
+			if (!(movieRepo.existsById(movieEntity.getId())||(movieRepo.findAll().stream()
+					.filter(a->a.getMovieName().toLowerCase().equalsIgnoreCase(movieEntity.getMovieName()))
+					.collect(Collectors.toList())).size()>0)) 
+			{
 				movieRepo.save(movieEntity);
 				return "The Movie " + movieEntity.getMovieName() + " is saved";
+			} else {
+				throw new MovieAlreadyExistsException("This movie '"+movieEntity.getMovieName()+"' already exists");
 			}
 		} catch (MovieAlreadyExistsException e) {
 			e.printStackTrace();
 		}
-		return "This movie already exists";
+		return "This movie '"+movieEntity.getMovieName()+"' already exists";
 	}
 
 	@Override
 	public String saveall(List<MovieEntity> movieEntity) throws MovieAlreadyExistsException {
-		int movieId = 0;
+		String movieId="";
 		try {
 			for (MovieEntity movie : movieEntity) {
-				if (movieRepo.existsById(movie.getMovieId())) {
-					movieId = movie.getMovieId();
+				movieId = movie.getId();
+				if (movieRepo.existsById(movie.getId())) {
 					throw new MovieAlreadyExistsException("This movie already exists");
 				} else {
 					movieRepo.saveAll(movieEntity);
@@ -55,17 +62,26 @@ public class MovieServiceImpl implements MovieService {
 
 	@Override
 	public String update(MovieEntity movieEntity) throws MovieNotExistsException {
+		List<MovieEntity> movieList=findByName(movieEntity.getMovieName()).stream().collect(Collectors.toList());
+		String id="";
 		try {
-			if (!movieRepo.existsById(movieEntity.getMovieId())) {
-				throw new MovieNotExistsException("This movie with id " + movieEntity.getMovieId() + " not exists");
-			} else {
-				movieRepo.save(movieEntity);
-				return "The Movie " + movieRepo.findById(movieEntity.getMovieId()) + " is updated";
+			for(MovieEntity movie:movieList) {
+				if (movie.getMovieName()==movieEntity.getMovieName()||movie.getMovieGenre()==movieEntity.getMovieGenre()
+						||movie.getMovieRating()==movieEntity.getMovieRating()||movie.getLikes()==movieEntity.getLikes()) {
+					id=movie.getId();
+					if (!movieRepo.existsById(id)) {
+						throw new MovieNotExistsException("This movie with id " + id + " not exists");
+					} else {
+						movieRepo.save(movie);
+						return "The Movie " + movie.getMovieName() + " is updated";
+					}
+				}
+			
 			}
 		} catch (MovieNotExistsException e) {
 			e.printStackTrace();
 		}
-		return "This movie with id " + movieEntity.getMovieId() + " not exists";
+		return "This movie with id " + id+ " not exists";
 	}
 
 	@Override
@@ -100,38 +116,43 @@ public class MovieServiceImpl implements MovieService {
 
 	@Override
 	public List<MovieEntity> findByName(String movieName) throws MovieNotExistsException{
+		List<MovieEntity> movieList=new ArrayList<MovieEntity>();
 		try {
-			List<MovieEntity> movieList=movieRepo.findAll().stream()
+			 movieList=movieRepo.findAll().stream()
 					.sorted(Comparator.comparing(MovieEntity::getLikes).reversed()
 							.thenComparing(MovieEntity::getMovieName))
 					.filter(movie->movie.getMovieName().toLowerCase().contains(movieName.toLowerCase()))
-					.toList();
+					.collect(Collectors.toList());
 			if (!movieList.isEmpty()) {
 				return movieList;
 			}else {
 				movies.clear();
-				movies.add(new MovieEntity(0, "No movie with name '"+movieName+"'", "None", 0, 0));
+				movies.add(new MovieEntity("null", "No movie with name '"+movieName+"'", "None", 0, 0));
 				throw new MovieNotExistsException("Not found with name"+movieName);
 			}
 		}catch (MovieNotExistsException e) {
 			e.printStackTrace();
 		}
-		return movies;
+		return movieList;
 	}
 
 	@Override
-	public String deleteById(int movieId) throws MovieNotExistsException {
+	public String deleteById(String movieName) throws MovieNotExistsException {
 		try {
-			if (movieRepo.existsById(movieId)) {
-				movieRepo.deleteById(movieId);
-				return "The movie is deleted";
-			} else {
-				throw new MovieNotExistsException("Movie not exists with id");
+			List<MovieEntity> listMovies=movieRepo.findAll().stream()
+					.filter(a->a.getMovieName().toLowerCase().contains(movieName.toLowerCase())).toList();
+			if (listMovies.size()==1) {
+				for(MovieEntity movie:listMovies) {
+					movieRepo.deleteById(movie.getId());
+					return "Deleted movie '"+movie.getMovieName()+"'";
+				}
+			}else {
+				throw new  MovieNotExistsException("Movie name not exists '"+movieName+"'");
 			}
 		} catch (MovieNotExistsException e) {
 			e.printStackTrace();
 		}
-		return "Movie not exists with id";
+		return "Movie not matched with the data we have, try to give full name of movie";
 	}
 
 	@Override
